--- a/style.css
+++ b/style.css
@@ -1,29 +1,66 @@
-body {
-    background-color: #271920;
-    display: flex;
-    justify-content: center;
+body{
+  display: block;
+  margin: auto;
+  width: 500px;
+  margin-top:10px;
 }
 
-.grid {
-    margin-top: 50px;
-    width: 288px;
-    height: 288px;
-    border: solid white 8px;
-    border-radius: 3px;
-    display: flex;
-    flex-wrap: wrap;
+.square{
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  margin: 0px;
+  animation: fadeIn 1s;
 }
 
-.grid div {
-    width: 30px;
-    height: 30px;
-    border: solid white 0.5px;
+#boardOuter{
+  height: 225px;
+  width: 225px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
-.even {
-    background-color: #E1b894;
+#boardInner{
+  border: solid 1px black;
+  width: 200px;
+  height: 200px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
-.odd {
-    background-color: #E9E287;
+#numberContainer{ 
+ width: 200px;
+ height: 25px;
+  margin-left:24px;
+}
+
+#letterContainer{
+  width: 23px;
+  display: inline-block;
+  height: 200px;
+  margin-top:1px;
+}
+
+.label {
+  width: 25px;
+  height: 25px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.row{
+  display: flex;
+  width: 200px;
+  height: 25px;
+}
+
+@keyframes fadeIn {
+  0%{
+    transform: rotateY(180deg);
+  } 100% {
+   transform: rotateY(0deg);
+  }
 }
